--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -2,3 +2,8 @@ Flask==2.0.1
 flask-cors==3.0.10
 youtube-transcript-api==0.4.4
 cohere==3.3.0
+nltk==3.8.1
+numpy==1.24.3
+networkx==3.1
+scikit-learn==1.2.2
+deepmultilingualpunctuation==1.0.1
